*fix the anchor

--- a/demo-code/webpack-dll-demo/package.json
+++ b/demo-code/webpack-dll-demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "08-webpack-dll-demo",
+  "name": "webpack-dll-demo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
